--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -83,12 +83,16 @@ margin-top: -50px;
 }
   
   .content {
-    background-color: #fefefe;
+    background-color: lightgreen;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
-    border: 1px solid #888;
+    border: 10px solid purple;
     width: 80%; /* Could be more or less, depending on screen size */
   }
+
+.table {
+  text-decoration: underline;
+}
 
 
   
